src/test/ui/closures/2229_closure_analysis/diagnostics/simple-struct-min-capture.stderr
error[E0502]: cannot borrow `p` as immutable because it is also borrowed as mutable
  --> $DIR/simple-struct-min-capture.rs:22:22
   |
LL |     let mut c = || {
   |                 -- mutable borrow occurs here
LL |         p.x += 10;
   |         --- capture is mutable because of use here
LL |         println!("{:?}", p);
   |                          - first borrow occurs due to use of `p` in closure
...
LL |     println!("{:?}", p);
   |                      ^ immutable borrow occurs here
LL |
LL |     c();
   |     - mutable borrow later used here
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
